--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,6 @@ requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
 ]
+
+[project.urls]
+repository = "https://github.com/Llandy3d/pytheus"
