--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3"
 services:
   redis:
     image: redis
+    ports:
+      - "6379:6379"
 
   prometheus:
     image: prom/prometheus:latest
