--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ test = [
   "pytest >= 7.0.0",
   "mypy == 1.1.1",
   "ruff == 0.0.260",
+  "black == 23.3.0",
+  "isort == 5.12.0",
 
   # mypy types
   "types-redis == 4.5.4.0",
@@ -42,3 +44,6 @@ line-length = 100
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
+
+[tool.isort]
+profile = "black"
