--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ line-length = 100
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
+"tests/test_exposition.py" = ["E501"]
 
 [tool.isort]
 profile = "black"
