--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,11 @@ repos:
     rev: 5.12.0
     hooks:
       - id: isort
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.1.1
+    hooks:
+      - id: mypy
+        exclude: example.py
+        additional_dependencies:
+          - types-redis >= 4.5.4.0"
