dark/light mode toggle

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,24 @@ site_name: pytheus
 
 theme:
   name: material
+
   icon:
     repo: fontawesome/brands/github
+
+  palette:
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to light mode
 
 repo_url: https://github.com/Llandy3d/pytheus
