enable syntax highlighting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,3 +23,12 @@ theme:
         name: Switch to light mode
 
 repo_url: https://github.com/Llandy3d/pytheus
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
