add project urls

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ classifiers = [
 ]
 
 [project.urls]
-repository = "https://github.com/Llandy3d/pytheus"
+Homepage = "https://github.com/Llandy3d/pytheus"
+Documentation = "https://pythe.us"
 
 [project.optional-dependencies]
 test = [
