initial labels doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
   - Introduction: 'index.md'
   - Usage:
     - Quickstart: quickstart.md
+    - Labels: labels.md
 
 markdown_extensions:
   - pymdownx.highlight:
