--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
     - Counter: counter.md
     - Gauge: gauge.md
     - Histogram: histogram.md
+    - Custom Collector: custom_collector.md
 
 markdown_extensions:
   - pymdownx.highlight:
