--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ repo_url: https://github.com/Llandy3d/pytheus
 
 nav:
   - Introduction: 'index.md'
+  - Architecture: 'architecture.md'
   - Usage:
     - Quickstart: quickstart.md
     - Labels: labels.md
@@ -40,6 +41,8 @@ nav:
     - Registry: registry.md
     - Backend / Multiprocessing: backend.md
     - Custom Collector: custom_collector.md
+  - Reference:
+    - Quickref: quickref.md
 
 markdown_extensions:
   - pymdownx.highlight:
