--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ test = [
   "black == 23.3.0",
   "isort == 5.12.0",
   "tox == 4.4.11",
+  "fakeredis == 2.10.3",
 
   # mypy types
   "types-redis == 4.5.4.0",
