--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,6 @@ env_list = py{310,311}
 description = run unit tests
 deps =
     pytest>=7
+    fakeredis>=2
 commands =
     pytest {posargs:tests}
