--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ Documentation = "https://pythe.us"
 [project.optional-dependencies]
 test = [
   "pytest >= 7.0.0",
+  "pytest-asyncio >= 0.21.0",
   "mypy == 1.1.1",
   "ruff == 0.0.260",
   "black == 23.3.0",
