tox pytest-asyncio dep

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ env_list = py{310,311}
 description = run unit tests
 deps =
     pytest>=7
+    pytest-asyncio>=0.21
     fakeredis>=2
 commands =
     pytest {posargs:tests}
