--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,8 @@ nav:
     - Registry: registry.md
     - Backend / Multiprocessing: backend.md
     - Custom Collector: custom_collector.md
+  - Tutorial:
+    - FastAPI: fastapi.md
   - Reference:
     - Quickref: quickref.md
     - Changelog: changelog.md
