initial compatibility layer & HistogramAdapter

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,6 @@ deps =
     pytest>=7
     pytest-asyncio>=0.21
     fakeredis>=2
+    prometheus_client>=0.17.1
 commands =
     pytest {posargs:tests}
