--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ test = [
   "black == 23.3.0",
   "isort == 5.12.0",
   "tox == 4.4.11",
+  "prometheus_client == 0.17.1",
 
   # mypy types
   "types-redis == 4.5.4.0",
