--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[test,redis]
+          pip install -e .[test,redis,prometheus_client]
       - uses: pre-commit/action@v3.0.0
       - name: Run Tests
         run: |
