--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [tox]
 requires =
     tox>=4
-env_list = py{38,39,310,311,312}
+env_list = py{38,39,310,311,312,313}
 
 [testenv]
 description = run unit tests
 deps =
     pytest>=7
     pytest-asyncio>=0.21
-    fakeredis>=2
+    redis>=5,
     prometheus_client>=0.17.1
 commands =
     pytest {posargs:tests}
