--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,4 +31,4 @@ repos:
       - id: mypy
         exclude: example.py
         additional_dependencies:
-          - types-redis >= 4.6.0.20241004"
+          - types-redis >= 4.6.0.20241004
